# Training-Piscine-Python-for-datascience-0

./: Hello.py  README.md  stdout_tester.py
ex00/: Hello.py  Hello.test.py  test.py
ex01/: format_ft_time.py  format_ft_time.test.py  test.py
ex02/: find_ft_type.py  find_ft_type.test.py  test.py  tester.py
ex03/: NULL_not_found.py  NULL_not_found.test.py  test.py
ex04/: test.py  whatis.py  whatis.test.py
ex05/: building.py  building.test.py  test.py
ex06/: filterstring.py  filterstring.test.py  ft_filter.py  ft_filter.test.py
ex07/: sos.py  test.py
ex08/: Loading.py  Loading.test.py
ex09/: pyproject.toml  why.txt
ex09/src/ft_package/: __init__.py  example.py
